Feat(queues): song specific handler
